# 3dprojections

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  matdisplay.cpp  matdisplay.h
